# sql-optimizer-skill

./: .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  PARALLEL_PLAN.md  README.md  REVIEW_FEEDBACK.md  TEST_EVIDENCE.md  build.py  pyproject.toml  requirements-mysql.txt  requirements-openai.txt  requirements-postgresql.txt  requirements.txt  sql-optimization-demo-result.md  sql_optimizer_run.sh  sqlopt-lmstudio.yml  sqlopt-template-mysql.yml  sqlopt-template-postgresql.yml  sqlopt-test.yml  sqlopt.spec  sqlopt.yml  sqlopt_test.yml  问题.md
.sisyphus/: boulder.json  ralph-loop.local.md
contracts/: CHANGELOG.md  README.md  acceptance_result.schema.json  llm_candidate.schema.json  optimization_proposal.schema.json  patch_result.schema.json  run_index.schema.json  run_report.schema.json  sql_artifact_index_row.schema.json  sqlunit.schema.json  versions.json
docs/: ARCHITECTURE.md  ARCHITECTURE_COMPARISON.md  CODE_QUALITY_REVIEW_20260319.md  CONFIG.md  CONFIG_NEW.md  DISTRIBUTION.md  INDEX.md  INSTALL.md  ISSUES.md  KNOWN_ISSUES.md  LLM_REPLAY.md  MIGRATION.md  MYBATIS-TEST-INTEGRATION-REPORT.md  QUICKSTART.md  TROUBLESHOOTING.md  UPGRADE.md  current-spec.md  failure-codes.md  pending-changes-report-enhancement.md  scanner-spi.md  skill-trigger-examples.md
install/: build_bundle.py  build_bundle.sh  doctor.py  install_skill.py  install_skill.sh  requirements.txt  uninstall_skill.py  uninstall_skill.sh
installer/: README.md  build.py  init.bat  init.sh
scripts/: benchmark_workflow.py  build.py  calibrate_fixture_scenarios.py  generate_fixture_scenarios.py  generate_rich_demo.py  quick_validate.py  resolve_run_id.py  resume_until_stage.py  run_one_step.py  run_sample_project.py  run_until_budget.py  run_v9_demo.py  run_with_resolved_id.py  scanner_bridge_probe.py  schema_validate_all.py  sqlopt  sqlopt.bat  sqlopt_cli.py  sqlopt_data_cli.py  test_mysql.py
sqlopt-dashboard/: bundle.html  index.html  index.html''  package.json  playwright.config.ts  pnpm-lock.yaml  test-dashboard.mjs  vite.config.ts
templates/: sqlopt-rules.example.yml  sqlopt.example.yml  sqlopt.example.yml.template  sqlopt.mysql.yml.template  sqlopt.postgresql.yml.template
tests/: README.md  __init__.py  conftest.py  fixture_project_harness_support.py  test_acceptance_policy.py  test_action_guidance_consistency.py  test_apply_mode.py  test_architecture_boundaries.py  test_base_stage_contract.py  test_baseline_explain_parser.py  test_baseline_module.py  test_branching_module.py  test_build_bundle.py  test_builtin_rules_detection.py  test_candidate_generation_policy.py  test_candidate_patchability.py  test_candidate_selection_models.py  test_candidate_selection_module.py  test_canonicalization.py  test_classification.py  test_cli_help_text.py  test_cli_report_finalization.py  test_cli_verify.py  test_commands_baseline.py  test_commands_branch.py  test_compare_prepare.py  test_config_defaults.py  test_config_removed_keys.py  test_config_removed_keys_improved.py  test_config_service.py  test_config_validation.py  test_contract_model_interfaces.py  test_contract_validator_enhanced.py  (+89 more)
(+3119 files in other folders)
