[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-optimizer"
version = "1.0.0"
requires-python = ">=3.9"
dependencies = [
  "jsonschema>=4.0.0",
  "PyYAML>=6.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["python"]
addopts = "-q --tb=short"
filterwarnings = [
  "ignore::DeprecationWarning",
]
